--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+env*/
 
 # Spyder project settings
 .spyderproject
@@ -117,6 +118,7 @@ dmypy.json
 
 .idea/
 __referencestuff__/
+__junk__/
 
 config.json
 
